--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
