--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.16",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
